# agent-handoff

./: .gitignore  README.md  pyproject.toml
examples/agency-handoff/: sample-acceptance-report.md  scenarios.yaml
ops/: gumroad-listing.md
pack/procurement/: README.md  client-onboarding.md  report-template.md  sow-snippet.md
scripts/: package_procurement_pack.sh
src/agent_handoff/: __init__.py  cli.py  models.py  report.py  runner.py
tests/: test_handoff.py
