[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-handoff"
version = "0.1.0"
description = "Golden-scenario baseline and client handoff acceptance reports for AI agencies."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Masoob Alam", email = "masoob0085@gmail.com" }]
keywords = ["agents", "acceptance", "regression", "handoff", "eval"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
agent-handoff = "agent_handoff.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_handoff"]

[tool.hatch.build.targets.sdist]
include = ["src/agent_handoff", "tests", "examples", "pack", "README.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
